# casablanca

./: Design.doc  Readme.txt  design_uml.mdj
application/: CMakeLists.txt  main.cpp
application/Login/: CLoginPage.cc  CLoginPage.h
server/: CMakeLists.txt  main.cpp
server/HTTPServer/: CHTTPServer.cc  CHTTPServer.h
server/UserDatabase/: CUserDatabase.cc  CUserDatabase.h
unit_test/: CMakeLists.txt  main.cpp
